--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 .NavBar_Container {
 	width: 100%;
 	height: 50px;
-	background-color: aquamarine;
+	/* background-color: lightgrey; */
 	position: sticky;
 	top: 0;
 	display: flex;
@@ -12,8 +12,48 @@
 .left,
 .right {
 	flex: 3;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .center {
 	flex: 6;
+}
+
+.right_image {
+	width: 40px;
+	height: 40px;
+	border-radius: 50%;
+	object-fit: cover;
+}
+
+.icons {
+	font-size: 20px;
+	margin-right: 20px;
+	color: lightslategray;
+	cursor: pointer;
+}
+
+.centerList {
+	display: flex;
+	justify-content: center;
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	opacity: 80%;
+}
+
+.listItem {
+	margin-right: 20px;
+	font-size: 18px;
+	font-weight: 300;
+	cursor: pointer;
+}
+
+.searchIcon {
+	font-size: 20px;
+	color: gray;
+	cursor: pointer;
+	margin-left: 15px;
 }
