--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,12 +1,12 @@
 .NavBar_Container {
 	width: 100%;
 	height: 50px;
-	/* background-color: lightgrey; */
+	/* background-color: darkgrey; */
 	position: sticky;
 	top: 0;
 	display: flex;
 	align-items: center;
-	font-family: "Raleway", sans-serif;
+	font-family: "Asap", sans-serif;
 }
 
 .left,
@@ -31,7 +31,7 @@
 .icons {
 	font-size: 20px;
 	margin-right: 20px;
-	color: lightslategray;
+	color: darkgrey;
 	cursor: pointer;
 }
 
@@ -53,7 +53,7 @@
 
 .searchIcon {
 	font-size: 20px;
-	color: gray;
+	color: darkgrey;
 	cursor: pointer;
 	margin-left: 15px;
 }
