--- a/src/Components/Posts/SinglePost.css
+++ b/src/Components/Posts/SinglePost.css
@@ -8,3 +8,48 @@
 	object-fit: cover;
 	border-radius: 7px;
 }
+
+.postInfo {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.postCat {
+	margin-top: 15px;
+	border-bottom: 1px solid darkgrey;
+	border-top: 1px solid darkgrey;
+}
+
+.postCategories {
+	font-size: 15px;
+	color: brown;
+	line-height: 18px;
+	font-family: "Asap", sans-serif;
+	cursor: pointer;
+	margin: 15px;
+}
+
+.postTitle {
+	font-family: "Nunito", sans-serif;
+	font-size: 24px;
+	font-weight: 700;
+	cursor: pointer;
+}
+
+.postDate {
+	font-family: serif;
+	font-style: italic;
+	font-size: 13px;
+	color: darkgrey;
+}
+
+.postDes {
+	font-size: 14px;
+	overflow: hidden;
+	line-height: 24px;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
+	-webkit-box-orient: vertical;
+}
