--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,12 +1,13 @@
 .NavBar_Container {
 	width: 100%;
 	height: 50px;
-	/* background-color: darkgrey; */
+	background-color: white;
 	position: sticky;
 	top: 0;
 	display: flex;
 	align-items: center;
 	font-family: "Asap", sans-serif;
+	z-index: 2;
 }
 
 .left,
