--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -42,7 +42,7 @@
 	border-radius: 5px;
 	padding: 10px;
 }
-.loginButton {
+.registerLoginButton {
 	position: absolute;
 	top: 100px;
 	right: 20px;
