--- a/client/src/Pages/Login/Login.css
+++ b/client/src/Pages/Login/Login.css
@@ -42,6 +42,11 @@
 	border-radius: 5px;
 	padding: 10px;
 }
+
+.loginButton:disabled {
+	cursor: not-allowed;
+	background-color: firebrick;
+}
 .loginRegisterButton {
 	position: absolute;
 	top: 100px;
